// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-gzVnrw gGrLow"
>
  <div
    className="sc-htoDjs jrHPzG"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-gzVnrw gGrLow"
>
  <div
    className="sc-htoDjs jrHPzG"
  >
    title
  </div>
  content
</header>
`;
